# google-or-tools

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  run_api.py
.github/workflows/: python-tests.yml
data/resource_planner/configurations/: oge.json  test_l1.json  test_l2.json  test_max_work_time.json  test_max_work_time2.json
data/resource_planner/debug/: input_20250507_113050.json  output_20250507_105341.json  output_20250507_113050.json
examples/: api_client.py  plan_resources.py  resource_assignment.py  simple_optimization.py
examples/notebooks/: resource_assignment.ipynb
notebooks/: resource_assignment.ipynb  resource_planning.ipynb  simple_optimization.ipynb
resource_planner/: README.md
resource_planner/data/configurations/: test_l2.json  test_max_work_time2.json
resource_planner/data/debug/: input_20250509_091324.json  input_20250509_091414.json  (+8 more)
resource_planner/notebooks/: resource_planning.ipynb
resource_planner/src/: __init__.py  config_loader.py  resource_planner.py  resource_planning_service.py
src/: __init__.py  config_loader.py  resource_planner.py  resource_planning_service.py
src/api/: resource_planner_api.py
src/constraints/: __init__.py  base_constraint.py  one_duty_per_day_constraint.py  required_employees_constraint.py  rest_time_constraint.py  workload_balance_constraint.py
src/resource_planner/: config_loader.py  resource_planner.py  resource_planning_service.py  run_api.py
tests/: test_basic.py  test_config_loader.py  test_resource_planner.py  test_resource_planning_service.py
(+35 files in other folders)
