[project]
name = "google-or-tools-examples"
version = "0.1.0"
description = "Examples and learning materials for Google OR-Tools"
requires-python = ">=3.11"
dependencies = [
    "ortools>=9.12.4544",
    "pytest>=8.3.5",
    "jupyter>=1.1.1",
    "notebook>=7.4.1",
    "numpy>=1.26.4",
    "matplotlib>=3.8.3",
    "flask>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
